# JFB_docs_bot

./: .gitignore  AGENTS.md  JetFormBuilder_KnowledgeGPT_SPEC.md  Makefile  PLANS.md  README.md  alembic.ini  docker-compose.yml  openapi.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
app/: main.py
app/db/: __init__.py  config.py  models.py  repository.py  session.py
app/discovery/: __init__.py  run.py  sitemap.py
docs/issues/: ISSUE-01-bootstrap.md  ISSUE-01-closure-evidence.md  ISSUE-02-closure-evidence.md  ISSUE-02-db-schema.md  ISSUE-02-exploration.md  ISSUE-02-implementation-plan.md  ISSUE-03-closure-evidence.md  ISSUE-03-exploration.md  ISSUE-03-implementation-plan.md  ISSUE_CLOSURE_EVIDENCE_TEMPLATE.md  README.md
docs/process/: GITHUB_FREE_LIMITS.md  GITHUB_SETUP.md  ISSUE_01_GITHUB_WORKFLOW.md  MIGRATIONS.md  VERSIONING.md  WORKFLOW.md
migrations/: README.md  env.py
migrations/versions/: 20260217_0001_initial_schema.py  20260218_0002_discovered_urls_queue.py
scripts/: discover_urls.sh  lint.sh  test.sh
skills/create-issue/: SKILL.md
skills/create-issue/agents/: openai.yaml
skills/create-issue/scripts/: find_relevant_files.py
skills/create-plan/: SKILL.md
skills/execute-skill/: SKILL.md
skills/issue-explorer/: SKILL.md
skills/review-skill/: SKILL.md
tests/integration/: conftest.py  test_db_migrations.py  test_db_repository.py  test_discovery_repository.py  test_health_smoke.py
tests/unit/: test_db_config.py  test_sitemap_discovery.py
(+6 files in other folders)
